fix: enable backlinks panel scrollbar

--- a/src/plugins/backlinks/assets/panel.css
+++ b/src/plugins/backlinks/assets/panel.css
@@ -1,5 +1,6 @@
 /* https://necolas.github.io/normalize.css/ */
 html {
+    overflow: auto;
     line-height: 1.15;
     -ms-text-size-adjust: 100%;
     -webkit-text-size-adjust: 100%
